--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
         .dark body {
             background-color: #020617;
         }
+        /* Custom scrollbar for better aesthetics */
+        ::-webkit-scrollbar {
+          width: 8px;
+        }
+        ::-webkit-scrollbar-track {
+          background: transparent;
+        }
+        ::-webkit-scrollbar-thumb {
+          background: #cbd5e1;
+          border-radius: 10px;
+        }
+        .dark ::-webkit-scrollbar-thumb {
+          background: #334155;
+        }
     </style>
 <script type="importmap">
 {
@@ -35,7 +49,11 @@
     "react": "https://esm.sh/react@^19.2.4",
     "react/": "https://esm.sh/react@^19.2.4/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0"
+    "react-router-dom": "https://esm.sh/react-router-dom@^6.22.3",
+    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
+    "firebase/app": "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/11.4.0/firebase-auth.js",
+    "firebase/": "https://esm.sh/firebase@^12.9.0/"
   }
 }
 </script>
